修复 代码段于博客首页样式宽度过长会出现横向滚动条的情况

--- a/example/docs/views/category2/2016/121501.md
+++ b/example/docs/views/category2/2016/121501.md
@@ -8,4 +8,9 @@ categories:
 sticky: 1
 ---
 
+``` js
+console.log('This is a test snippet. If it is too long, it will automatically hide the width cascade to drag horizontally.')
+```
+<!-- more -->
+
 first page in category2
